Put the camera stuff into it's own function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <!-- <script src="p5functionsused.js"></script> -->
+    <script src="hcCamera.js"></script>
     <script src="sketch.js"></script>
 </body>
 
