able to dectect box from hashed color (with very noticible bugs)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <script src="hcCamera.js"></script>
+    <script src="boxHasher.js"></script>
     <script src="sketch.js"></script>
 </body>
 
